# artifetch

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
artifetch/: cli.py  core.py
artifetch.egg-info/: PKG-INFO
artifetch/fetchers/: repo_clone.py  repo_content.py
artifetch/providers/: artifactory.py  git.py
artifetch/utils/: filesystem.py
docs/: RepoCloneFetcher.md  RepoContentFetcher.md  repoclonedraftusageexamples
tests/: test_artifactory.py  test_core.py  test_git.py  test_gitlab.py  test_repo_clone.py  test_repo_content.py  test_repository_content.py
