[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifetch"
version = "0.0.1"
description = "Universal artifact fetcher for Artifactory, GitLab, and Git."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Gemma Mcgee" }]
dependencies = ["requests", "python-gitlab", "python-dotenv"]

[project.scripts]
artifetch = "artifetch.cli:main"